appv1/templates/argorollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-analysis-step
spec:
  replicas: 4
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: nginxv1
  template:
    metadata:
      labels:
        app: nginxv1
    spec:
      containers:
      - name: rollouts-demo
        image: manouchehrsolamani/trivago:v20
        imagePullPolicy: Always
        ports:
        - containerPort: 80
  strategy:
    canary:
      stableService: nginxv1-svc
      canaryService: nginxv1-svc-canary
      trafficRouting:
        nginx:
          stableIngress: ingress1
      steps:
      - setWeight: 25
      - pause: {}
      # An AnalysisTemplate is referenced at the second step, which starts an AnalysisRun after
      # the setWeight step. The rollout will not progress to the following step until the
      # AnalysisRun is complete. A failure/error of the analysis will cause the rollout's update to
      # abort, and set the canary weight to zero.
