appv1/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxv1-svc
  labels:
        app: nginxv1
  namespace: trivago-app
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginxv1
