appv1/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress1
  namespace: trivago-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: trivago.de
    http:
      paths:
        - backend:
            service:
              name: nginxv1-svc
              port:
                number: 80
          path: /
          pathType: Exact
        # - backend:
            # service:
              # name: web2
              # port:
                # number: 8080
